# poetry-test

./: pyproject.toml
docs/: conf.py  index.rst
src/poetry_test/: foo.py
