[tool.poetry]
name = "poetry-test"
version = "0.1.0"
description = ""
authors = ["Sean Tully <14188124+multipitch@users.noreply.github.com>"]
include = ["docs/_build/latex/*.pdf", "docs/_build/html/",]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
sphinx = "^3.2.0"

[tool.black]
line-length=79
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

